--- a/package.json
+++ b/package.json
@@ -3,12 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/lab": "^5.0.0-alpha.101",
+    "@mui/material": "^5.10.7",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.1.0",
+    "chart.js": "^3.9.1",
+    "firebase": "^9.11.0",
+    "html-react-parser": "^3.0.4",
     "react": "^18.2.0",
+    "react-alice-carousel": "^2.6.4",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^3.1.4",
+    "react-google-button": "^0.7.2",
+    "react-icons": "^4.4.0",
+    "react-redux": "^8.0.4",
+    "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
